<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <com.caverock.androidsvg.SVGImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image_club_logo"
        android:maxHeight="300dp"
        android:maxWidth="300dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/my_toolbar_club"
        android:adjustViewBounds="true"/>

    <TextView
        android:id="@+id/club_name_short_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_name_short"
        android:layout_marginStart="38dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/club_name_long_label"
        android:layout_alignParentStart="true"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/club_name_short_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="liverpool"
        android:layout_marginStart="13dp"
        android:layout_alignBaseline="@+id/club_name_short_label"
        android:layout_alignBottom="@+id/club_name_short_label"
        android:layout_toEndOf="@+id/image_club_logo" />

    <TextView
        android:id="@+id/club_name_long_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_name"
        android:layout_alignBaseline="@+id/club_name_long_text"
        android:layout_alignBottom="@+id/club_name_long_text"
        android:layout_alignEnd="@+id/club_name_short_label"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/club_name_long_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="lfc"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/image_club_logo"
        android:layout_alignEnd="@+id/club_name_short_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/favourite_switch_text"
        android:text="@string/favourite_club"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/club_name_short_label"
        android:layout_alignStart="@+id/club_name_long_label"
        android:textStyle="bold"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/favourite_switch"
        android:layout_alignBaseline="@+id/favourite_switch_text"
        android:layout_alignBottom="@+id/favourite_switch_text"
        android:layout_alignEnd="@+id/club_name_short_text" />

</RelativeLayout>